# servak_na_cpp_relays

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  compil_and_run_server_relays.bat
source/: http_utils.cpp  http_utils.h  my_time.cpp  my_time.h  platform.h  relay.cpp  relay.h  relay_http_handlers.cpp  relay_http_handlers.h  request.h  server_relays.cpp  sqlite3.md5  sqlite_helper.h
source/lib/: sqlite3.exp
www/: add_device.html  edit_relay_names.css  edit_relay_names.html  edit_relay_names.js  knopky.html  view_log_order.html
www/css/: add_device.css  home_page.css  knopky.css
www/firmware_update_dir/: firmware_update.sha256
www/js/: knopky.js  translations.js  transltAndSwop.js
